--- a/frontend/src/locales/ru/translation.json
+++ b/frontend/src/locales/ru/translation.json
@@ -246,11 +246,11 @@
     "Auth": {
       "errors": {
         "username": {
-          "from4to15": "Имя пользователя должно содержать от 4 до 15 символов!",
+          "from4to255": "Имя пользователя должно содержать от 4 до 255 символов!",
           "blank": "Имя пользователя не может быть пустым!"
         },
         "password": {
-          "from4": "Пароль должен содержать больше 4 символов!",
+          "from6to128": "Пароль должен содержать от 6 до 128 символов!",
           "blank": "Пароль не может быть пустым"
         }
       },
