feat(frontend): :sparkles: add `DataGripPro` for tables

--- a/frontend/src/locales/en/translation.json
+++ b/frontend/src/locales/en/translation.json
@@ -33,7 +33,7 @@
         "updateAvailable": "Update available"
       },
       "navigationTabs": {
-        "home": "Table",
+        "tables": "Tables",
         "chart": "Visualization",
         "settings": "Settings"
       },
